fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2668,9 +2668,9 @@ li {
 
 @media (max-width: 767px) {
   .slider__wrapper {
-    margin: 0 -20px; }
+    margin: 0 -15px; }
   .slider .slick-slide {
-    width: calc(100vw - 40px); }
+    width: calc(100vw - 30px); }
   .slick-center:before {
     background: rgba(24, 44, 61, 0) !important; } }
 
@@ -2743,8 +2743,6 @@ li {
 .webp .portfolio__living_room_interior {
   background: url("../img/portfolio-interior-1.webp") no-repeat;
   background-position: center; }
-  .webp .portfolio__living_room_interior:hover {
-    width: 480px; }
 
 .no-webp .portfolio__unknow_interior,
 .no-js .portfolio__unknow_interior {
@@ -2805,6 +2803,8 @@ li {
     left: 22px; }
 
 @media (max-width: 1169px) {
+  .portfolio {
+    overflow: hidden; }
   .portfolio__menu {
     width: 100%; }
   .portfolio__item {
@@ -2974,7 +2974,9 @@ li {
     overflow: hidden; }
   .services__img {
     width: auto;
-    margin-left: 0; }
+    margin-left: 0;
+    -o-object-fit: cover;
+       object-fit: cover; }
   .services__count {
     display: none; }
   .services__btn {
@@ -2984,7 +2986,8 @@ li {
     display: none; } }
 
 .video {
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
 
 .video__content {
   width: 100%;
